@@ -53,7 +53,6 @@
 
 - These functions should be added:
      divisor_sum
-     znprimroot
      legendre_phi
      znlog
 
