@@ -13,5 +13,6 @@ extern void totient(mpz_t totient, mpz_t n);
 extern void jordan_totient(mpz_t tot, mpz_t n, unsigned long k);
 extern void carmichael_lambda(mpz_t lambda, mpz_t n);
 extern void znorder(mpz_t res, mpz_t a, mpz_t n);
+extern void znprimroot(mpz_t root, mpz_t n);
 
 #endif
